Fix table/board views not visible in v0.47.0-beta

--- a/src/ui/scroll.scss
+++ b/src/ui/scroll.scss
@@ -2,22 +2,5 @@
 // directions.
 
 .collection-view-scroll {
-	position: absolute;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
 	overflow: auto;
-}
-
-// Override Trilium styles so that positioning will work:
-
-.note-detail.type-render,
-.note-detail-render {
-	height: 100%;
-}
-
-.note-book-content,
-.note-detail-render-content {
-	position: relative;
 }
